@@ -95,7 +95,7 @@ INSP.py.unresolved.ref.rule.like.ref.message=Cannot find rule or checkpoint ''{0
 ### Annotators ###
 ANN.keyword.argument.already.provided=Keyword argument already provided: {0}.
 ANN.positional.argument.after.keyword.argument=Positional argument after keyword argument.
-ANN.multiple.execution.sections=Multiple run/shell sections.
+ANN.multiple.execution.sections=Multiple execution sections, the first is ''{0}''.
 
 
 ## Parsing
