@@ -1,5 +1,5 @@
 <html>
 <body>
-Rule sections such as input/output/params/..., cannot be used after run/shell/script/wrapper/cwl sections.
+Rule sections such as input/output/params/..., cannot be used after run/shell/script/wrapper/cwl/notebook sections.
 </body>
 </html>
