@@ -1,0 +1,4 @@
+rule foo:
+    container: "docker://joseespinosa/docker-r-ggplot2"
+    script:
+        "foo.R"
