@@ -1,0 +1,3 @@
+rule hello:
+    notebook:
+        "hello.py.ipynb"
