@@ -10,12 +10,13 @@ Released on ...
 Features:
 - Inspection: warn about confusing reference in localrules section (see #287)
 - Inspection: Warn if mixed tabs and spaces (see #285)
+- 'notebook' section parsing error (see #288)
+- `envvars` isn't parsed properly (see #281)
+- `container` top level and rule sections parsing
 
 Fixed:
 - Rule not yet defined false positive for lambdas (see #286)
 - Unresolved reference for 'rule' in 'run' section (see #283)
-- `envvars` isn't parsed properly (see #281)
-- `container` top level section parsing fixed
 
 Version 0.6.0 build #0.6.0.165
 -------------
